Fix background on smaller devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
-body, html, #app {
-  height: 100%;
+@media only screen and (min-width: 1200px) {
+  body, html, #app {
+    height: 100%;
+  }
 }
 
 body {
